--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ p{
 .container-dream-big{
     /* border-left: 4px solid palevioletred;
     border-right: 4px solid rgb(255,167,46); */
-    background-image: url(images/dream-bg.png);
+    background-image: url(my-portfolio/images/dream-bg.png);
     background-position: right;
     background-repeat: no-repeat;
 }
