--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ p{
 }
 
 .expriences-area{
-    background-image: url(./images/exp-bg.png);
+    background-image: url(my-portfolio/images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left center;
 }
